# nautikalpanel

./: .dockerignore  .env.example  .gitignore  .ignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  game-server-template.schema.json
.github/workflows/: build-image.yml  deploy-docs.yml
charts/nautikalpanel/: values.yaml
charts/nautikalpanel/templates/: deployment.yaml
docs/: astro.config.mjs  package-lock.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/fragments/: add-modal.html
frontend/scripts/: create-server-modal.js  edit-server-modal.js  index.js  modal.js  notification-component.js
frontend/src/: app.ts  create-server-modal.ts  edit-server-modal.ts  game-server-store.ts  logs-modal.ts  main.ts  notification-component.ts  resource-utils.ts  style.css  types.ts
frontend/src/create-server-modal/: create-server-modal.html  create-server-modal.ts
frontend/src/dural-range-slider/: dual-range-slider.html  dual-range-slider.ts
frontend/src/stores/: store-types.ts  (+3 more)
game-server-templates/: generic.yaml  minecraft.yaml  satisfactory.yaml
k8s-templates/default/: _macros.yaml.jinja  init.yaml  pod_template.yaml  pod_template.yaml.jinja  pvc.yaml.jinja  service.yaml.jinja  sftp_only.yaml.jinja
src/: app_config.rs  main.rs
src/endpoints/: mod.rs
src/game_servers/: mod.rs
src/models/: mod.rs
src/services/: game_server_store.rs  k8s_resource_renderer.rs  kubernetes_executor.rs  mod.rs  template_repository_manager.rs  template_repository_store.rs
templates/: default.yaml
templates/default/: init.yaml
(+35 files in other folders)
