[package]
name = "nautikalpanel"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.18"
tera = "1.20.1"
surrealdb = { version = "2.6.1", features = ["kv-mem"] }
regex = "1.12.3"
tower-http = {  version = "0.6.8", features = ["fs"] }
either = "1.15.0"
