[package]
name = "nautikalpanel"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1", features = ["runtime"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.18"
tera = "1.20.1"
surrealdb = { version = "2.6.1", features = ["kv-rocksdb"] }
regex = "1.12.3"
tower-http = {  version = "0.6.8", features = ["fs"] }
either = "1.15.0"
anyhow = "1.0.101"
config = "0.15"
dotenvy = { version = "0.15" , optional = true}
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
url = "2.5.8"
urlencoding = "2.1"
reqwest = { version = "0.12.28", features = ["json"] }

[features]
dev-tools = ["dep:dotenvy"]
